tests/snapshots/insta_test__typedef-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: Declaration(
                Declaration {
                    declaration_specifiers: [
                        StorageClass(
                            Typedef,
                        ),
                        Type(
                            Int,
                        ),
                    ],
                    init_declarator: Some(
                        InitDeclarator {
                            declarator: Declarator {
                                n_star: 0,
                                direct_declarator: Ident(
                                    "int2",
                                ),
                            },
                            initializer: None,
                        },
                    ),
                    debug_info: DebugInfo {
                        file_info: FileInfo {
                            file_name: "not impl name.c",
                            src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                        },
                        pos: Position {
                            n_char: 0,
                            n_line: 0,
                        },
                    },
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 0,
                },
            },
        },
        ProgramComponent {
            kind: FuncDef(
                TypeDefName(
                    Base(
                        Int,
                    ),
                ),
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            StorageClass(
                                                Typedef,
                                            ),
                                            Type(
                                                TypeDefName(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "int3",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                            },
                                            pos: Position {
                                                n_char: 4,
                                                n_line: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                TypeDefName(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                5,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                                                },
                                                                pos: Position {
                                                                    n_char: 13,
                                                                    n_line: 3,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                            },
                                            pos: Position {
                                                n_char: 4,
                                                n_line: 3,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                TypeDefName(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "b",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                6,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                                                },
                                                                pos: Position {
                                                                    n_char: 13,
                                                                    n_line: 4,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                            },
                                            pos: Position {
                                                n_char: 4,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Return(
                                    Some(
                                        Expr {
                                            kind: Binary(
                                                Binary {
                                                    kind: Add,
                                                    lhs: Expr {
                                                        kind: Ident(
                                                            "a",
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: FileInfo {
                                                                file_name: "not impl name.c",
                                                                src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                                            },
                                                            pos: Position {
                                                                n_char: 11,
                                                                n_line: 5,
                                                            },
                                                        },
                                                    },
                                                    rhs: Expr {
                                                        kind: Ident(
                                                            "b",
                                                        ),
                                                        debug_info: DebugInfo {
                                                            file_info: FileInfo {
                                                                file_name: "not impl name.c",
                                                                src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                                            },
                                                            pos: Position {
                                                                n_char: 15,
                                                                n_line: 5,
                                                            },
                                                        },
                                                    },
                                                },
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: FileInfo {
                                                    file_name: "not impl name.c",
                                                    src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                                                },
                                                pos: Position {
                                                    n_char: 13,
                                                    n_line: 5,
                                                },
                                            },
                                        },
                                    ),
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "typedef int int2;\nint2 main() {\n    typedef int2 int3;\n    int2 a = 5;\n    int3 b = 6;\n    return a + b;\n}",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 1,
                },
            },
        },
    ],
}
